# card_engine_pp

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/card_engine_pp/: board.hpp  card.hpp  card_engine_pp.hpp  constraint.hpp  operation.hpp  util.hpp
source/: board.cpp  card_engine_pp.cpp  constraint.cpp  operation.cpp
test/: CMakeLists.txt
test/source/: board_test.cpp  card_engine_pp_test.cpp  card_test.cpp  constraint_test.cpp  operation_test.cpp
